compiler/tests/fa/errors/pure_print.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع فریاد(x : صحیح) : صحیح:
    چاپ(x)
    بازگشت x
پایان

تابع اصلی:
    چاپ(فریاد(2))
پایان
